Added more images

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <h1>My Photo Image Gallery</h1>
     <div class="container">
         <div class="img-grid">
+            <img src="images/photo21.jpg">
+            <img src="images/photo22.jpg">
+            <img src="images/photo25.jpg">
+            <img src="images/photo23.jpg">
             <img src="images/photo1.jpg">
             <img src="images/photo16.jpg">
             <img src="images/photo2.jpg" height="587px">
